# acuvity-python

./: .genignore  .gitignore  README.md  RELEASES.md  USAGE.md  apex-openapi.yaml  pyproject.toml
.devcontainer/: README.md
.github/workflows/: sanity.yaml  sdk_publish.yaml
.speakeasy/: gen.yaml  workflow.yaml
acuvity/: __init__.py  client.py  types.py
acuvity/apex_types/: __init__.py  alertevent.py  analyzer.py  analyzermodel.py  detector.py  elemental.py  extraction.py  extractionrequest.py  latency.py  modality.py  principal.py  principalapp.py  principaluser.py  root.py  scanexternaluser.py  scanrequest.py  scanresponse.py  textualdetection.py
acuvity/api_types/: apexinfo.py
docs/models/: additionalproperties.md  alertevent.md  analyzer.md  authtype.md  category.md  choice.md  confidence.md  decision.md  detectionmatcher.md  detectionmatchers.md  direction.md  extraction.md  extractionrequest.md  extractionsummary.md  kind.md  mcpmessage.md  mcpmessagetype.md  mcpserver.md  mcptoolannotations.md  modality.md  operator.md  policeexternaluser.md  policerequest.md  policeresponse.md  policeresponsetype.md  principal.md  principalapp.md  principalappuser.md  principalexternal.md  principaltype.md  scanrequest.md  scanrequestanonymization.md  scanrequesttype.md  scanresponse.md  scanresponsedecision.md  security.md  statuscode.md  textualdetection.md  textualdetectiontype.md  tool.md  (+4 more)
examples/: basic_file.py  basic_text.py  embedded-image.json  embedded-image.yaml  example_guard_config.yaml  file_prompt_all_types_guard_input.py  guards.py  intermediate_multimodal.py  openai_agent_sdk.py  piis.py  run.sh  scan.py  simple_default_guard_config.yaml  simple_guard_conf_with_threshold.yaml  simple_guard_config.yaml  specific_match_result_in_multirequest.py  specific_text_gibberish.py  specific_text_prompt_injection.py  standalone_malcontent_example.py  standalone_multi_input_default.py  standalone_pii_example.py  text_prompt_all_types_guard_input.py
scripts/: prepare_readme.py
(+91 files in other folders)
