[tool.poetry]
name = "acuvity"
version = "0.0.5"
description = "The official Acuvity Python SDK."
authors = ["Acuvity, Inc. <info@acuvity.ai>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/acuvity/acuvity-python"
repository = "https://github.com/acuvity/acuvity-python"

[tool.poetry.dependencies]
python = "^3.8"
httpx = {version = ">=0.23.0, <1", extras = ["http2"]}
pyjwt = "^2.9.0"
pydantic = ">=1.9.0, <3"
msgpack = {version = "^1.1.0", optional = true}
tenacity = "^9.0.0"

[tool.poetry.extras]
msgpack = ["msgpack"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
