[project]
name = "acuvity"
version = "0.7.0"
description = "Acuvity Python SDK"
authors = [{ name = "Acuvity, Inc." },]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "PyYAML (>=6.0.2,<7.0.0)",
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
    "pyjwt (>=2.9.0,<3.0.0)",
]

[tool.poetry]
homepage = "https://acuvity.ai/"
documentation = "https://github.com/acuvity/acuvity-python"
packages = [
    { include = "acuvity", from = "src" }
]
include = ["py.typed", "src/acuvity/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/acuvity/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
openai-agents = "^0.0.4"
pylint = "==3.2.3"
types-PyYAML = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


